<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/feed"
            android:enabled="true"
            android:icon="@drawable/ic_feed"
            android:iconTint="#fff"
            android:title="@string/feed"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/challenge"
            android:enabled="true"
            android:tint="#fff"
            android:icon="@drawable/ic_challenge"
            android:title="@string/challenge"
            app:showAsAction="ifRoom"
            />


        <item
            android:id="@+id/ranking"
            android:enabled="true"
            android:tint="#fff"
            android:icon="@drawable/ic_ranking"
            android:title="@string/rankingMenu"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/profile"
            android:enabled="true"
            android:tint="#fff"
            android:icon="@drawable/ic_ranking"
            android:title="@string/profile"
            app:showAsAction="ifRoom" />

</menu>