<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/red"
        app:tabIndicatorHeight="3dp"
        app:tabTextColor="@color/red"
        app:tabSelectedTextColor="@color/red">

        <android.support.design.widget.TabItem
            android:id="@+id/tabPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabChallengePlayers"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tabSent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabChallengeSended" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabReceived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabChallengeReceived" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/challengerviewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>