<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/userPicture"
        android:layout_width="78dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/user_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nome"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/userPicture"
        app:layout_constraintStart_toStartOf="@id/userPicture"
        app:layout_constraintTop_toBottomOf="@id/userPicture" />

    <LinearLayout
        android:layout_width="28dp"
        android:layout_height="27dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/userPicture"
        app:layout_constraintTop_toTopOf="@+id/userPicture">

        <TextView
            android:id="@+id/rankingTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:textColor="@color/colorPrimary"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/checkTextView"
        android:layout_width="79dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/check"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/userPicture"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>

