<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RankingScene.RankingView">

    <ImageView
        android:id="@+id/picture_img_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/userpicture"
        app:layout_constraintStart_toEndOf="@+id/position"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/picture_img_view"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/picture_img_view"
        android:text="@string/nome"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/picture_img_view"
        app:layout_constraintTop_toTopOf="@+id/picture_img_view" />

    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/n"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/picture_img_view" />

</android.support.constraint.ConstraintLayout>